# HOMESTRI-UR5e

./: .gitignore  Dockerfile  README.md  ROSinDocker.md  docker-compose-exp.yml  docker-compose.yml  docker-entrypoint.sh  gui-docker
.devcontainer/: devcontainer.json
experimentdevel/: CMakeLists.txt  package.xml  planning_services.bash
experimentdevel/launch/: gazebo_world.launch  spawn_robot.launch  two_arms_gazebo.launch  two_arms_rviz.launch  ur5_e_knowledgebase.launch  ur5_e_planning.launch
experimentdevel/pddl/: domain_ur5_e.pddl  problem_ur5_e.pddl
experimentdevel/scripts/: ur5_e_planning_interface.py
experimentdevel/spawn_objects/: CMakeLists.txt  package.xml
experimentdevel/spawn_objects/src/: spawn_objects_node.cpp
experimentdevel/spawn_objects/srv/: spawn_objects.srv
experimentdevel/world/: demo_world  demo_world.world
experimentdevel/world/interface/: model.config  model.sdf
experimentdevel/world/module/: model.config  model.sdf
experimentdevel/world/module/meshes/: module_dec.dae
gazebo_fix/: config.yaml
homestri_robot/homestri_robot_description/urdf/: ur5_e_robotiq_2f_85.urdf.xacro  ur5_e_robotiq_2f_85_macro.urdf.xacro
homestri_robot/moveit_config/: .setup_assistant  package.xml
homestri_robot/moveit_config/config/: fake_controllers.yaml  kinematics.yaml  ompl_planning.yaml  robot_arm.srdf  ros_controllers.yaml
homestri_robot/moveit_config/launch/: demo.launch  demo_gazebo.launch  gazebo.launch  planning_context.launch  ros_controllers.launch
homestri_robot_description/urdf/: ur5_e_robotiq_2f_85_macro.urdf.xacro
moveit_config/: package.xml
moveit_config/config/: robot_arm.srdf  ros_controllers.yaml
moveit_config/launch/: demo_gazebo.launch  gazebo.launch  trajectory_execution.launch.xml
src/moveit_config/config/: fake_controllers.yaml  joint_limits.yaml  robot_arm.srdf
src/moveit_config/launch/: chomp_planning_pipeline.launch.xml  move_group.launch  sensor_manager.launch.xml
